--- a/app/src/main/res/layout/activity_content_photo.xml
+++ b/app/src/main/res/layout/activity_content_photo.xml
@@ -1,32 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <TextView
+        android:id="@+id/activity_content_photo_TextView_tittle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/activity_content_photo_TextView_tittle"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/activity_content_photo_tag_linearLayout"
-        android:orientation="horizontal">
-    </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/activity_content_photo_url_linearLayout"/>
+        android:layout_height="wrap_content" />
     <ScrollView
+        android:id="@+id/activity_content_photo_scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/activity_content_photo_scrollView">
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:id="@+id/activity_content_photo_linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
         </LinearLayout>
-
-
     </ScrollView>
+
 </LinearLayout>
