--- a/app/src/main/res/layout/activity_content_text.xml
+++ b/app/src/main/res/layout/activity_content_text.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <TextView
+        android:id="@+id/activity_content_text_TextView_tittle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/activity_content_text_TextView_tittle"
         android:paddingBottom="40dp"/>
+
+    <ScrollView
+        android:id="@+id/activity_content_text_scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
     <LinearLayout
+        android:id="@+id/activity_content_text__text_linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/activity_content_text__text_linearLayout"
         android:orientation="vertical">
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/activity_content_text_tag_linearLayout"
-        android:orientation="horizontal">
-    </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/activity_content_text_TextView_url"/>
-
+    </ScrollView>
 </LinearLayout>
