Updates , code refactorization

--- a/app/src/main/res/layout/activity_content_audio.xml
+++ b/app/src/main/res/layout/activity_content_audio.xml
@@ -8,5 +8,5 @@
         android:id="@+id/activity_content_audio_audio_linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical" />
 </LinearLayout>
