--- a/app/src/main/res/layout/activity_content_text.xml
+++ b/app/src/main/res/layout/activity_content_text.xml
@@ -14,11 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-    <LinearLayout
-        android:id="@+id/activity_content_text__text_linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-    </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/activity_content_text__text_linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
     </ScrollView>
 </LinearLayout>
