--- a/app/src/main/res/layout/activity_content_photo.xml
+++ b/app/src/main/res/layout/activity_content_photo.xml
@@ -18,8 +18,7 @@
             android:id="@+id/activity_content_photo_linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-        </LinearLayout>
+            android:orientation="vertical" />
     </ScrollView>
 
 </LinearLayout>
