--- a/app/src/main/res/layout/activity_content_web.xml
+++ b/app/src/main/res/layout/activity_content_web.xml
@@ -8,9 +8,6 @@
         android:id="@+id/activity_content_web_video_webView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:padding="10dp">
 
     </WebView>
@@ -19,5 +16,5 @@
         android:id="@+id/activity_content_web_video_linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical" />
 </LinearLayout>
