--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,25 +12,24 @@
     tools:context="com.example.pmisi.tumblr_app.MainActivity">
 
     <EditText
+        android:id="@+id/main_activity_edit_text_username"
+        style="@style/Widget.AppCompat.EditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/main_activity_username"
-        style="@style/Widget.AppCompat.EditText"
         android:inputType="text"
         android:selectAllOnFocus="true"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:id="@+id/main_activity_edit_text_username" />
+        android:textAppearance="@style/TextAppearance.AppCompat" />
 
     <Spinner
+        android:id="@+id/main_activity_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/main_activity_spinner"
         android:entries="@array/type_arrays"/>
 
     <Button
+        android:id="@+id/main_activity_button_send"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/main_activity_send"
-        android:id="@+id/main_activity_button_send" />
-    />
+        android:text="@string/main_activity_send" />
 </LinearLayout>
