--- a/app/src/main/res/layout/activity_content_audio.xml
+++ b/app/src/main/res/layout/activity_content_audio.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <WebView
+        android:id="@+id/activity_content_audio_webView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </WebView>
     <LinearLayout
         android:id="@+id/activity_content_audio_audio_linearLayout"
         android:layout_width="match_parent"
