--- a/app/src/main/res/layout/activity_content_photo.xml
+++ b/app/src/main/res/layout/activity_content_photo.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:background="@color/background"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/activity_content_photo_TextView_tittle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/textColor" />
     <ScrollView
         android:id="@+id/activity_content_photo_scrollView"
         android:layout_width="match_parent"
