--- a/app/src/main/res/layout/container_content.xml
+++ b/app/src/main/res/layout/container_content.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:id="@+id/container_content_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
-    android:id="@+id/container_content_item">
+    android:orientation="vertical">
     <LinearLayout
+        android:id="@+id/container_content_linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/container_content_linear">
+        android:orientation="horizontal">
         <ImageView
             android:id="@+id/container_content_imageView"
             android:layout_width="50dp"
@@ -21,17 +21,18 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/container_content_textView_tittle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/container_content_textView_tittle"/>
+                android:maxLines="1" />
             <TextView
+                android:id="@+id/container_content_textView_type"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/container_content_textView_type"/>
+                android:layout_height="wrap_content" />
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/container_content_textView_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 />
         </LinearLayout>
 
